* The inner lanes on the freeways are the passing lanes

--- a/_i18n/en/_posts/2020-03-30-高速公路內側車道為超車道.md
+++ b/_i18n/en/_posts/2020-03-30-高速公路內側車道為超車道.md
@@ -1,23 +1,22 @@
 ---
   layout: "post"
-  title: "Apple Column: Inside lane of highway is overtaking lane"
-  excerpt: "How to improve the smoothness of highway traffic and the safety of passersby?"
+  title: "The inner lanes on the freeways are the passing lanes"
+  excerpt: "How to improve the freeway traffic flow and the safety of users?"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/8/862bc67b532ae87d4dc5f67bda6a93e99864d0a3.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+🛣️ Last October, an internet user named Hon proposed on the participation platform (join.gov.tw) that “We should remove the speed limit for the inner lanes, raise the speed limit for the middle lanes, and allow slow vehicles on the inner lanes.” Hon added, “Fast vehicles may use inner lanes and will avoid car crashes caused by the frequent lane change, which makes the freeways safer.” “It will reduce the time of traveling between two places and the fatigue of drivers traveling for a long time.”
 
- 🛣️ In October last year, netizen "Hon" filed a joint case on the Public Policy Network Participation Platform (Join.gov.tw), appealing for "inside lane speed limit lift", "center line speed limit increase" and "increase Penalty for slow driving on the inner side "and proposed that" fast trains can use the inner lane without causing accidents due to changing lanes and overtaking, which can make the highway safer "," reducing the time spent driving in two places and reducing the long time "Driving fatigue." 
+🚦 In fact, the Article 8.1.1 and Article 8.1.3 in the Freeway and Expressway Traffic Control Regulations issued by the Ministry of Transportation and Communications stipulated that “Any slower small vehicles whose speed is below 80 km/hr on the freeway sections whose speed limit is over 90 km/hr…should be kept on the outer lanes. They can access the adjacent outer lanes temporarily should they wish to pass the vehicles in front.” “The inner lanes are the passing lanes. However, small vehicles may travel on the inner lanes within the speed limit specified for the road section in question as long as they do not hold up the traffic.” Yet, according to Article 8.2, “Small vehicles may be exempt from the restrictions of Article 8.1.1 and Article 8.1.3 if there’s a traffic jam.” 
 
- 🚦 In fact, Article 8, Paragraph 1, Paragraph 1 and Paragraph 3 of the "Regulations on the Regulation of Freeway and Expressway Traffic" of the Ministry of Communications have been stipulated separately, "The maximum speed of expressways is 90 kilometers per hour. For the above sections, slower small cars with a speed lower than 80 kilometers per hour ... should drive on the outside lane and temporarily use the lane immediately adjacent to the outside lane to surpass the leading vehicle "," the inside lane is the overtaking lane. Without blocking the traffic, you can drive on the inside lane at the highest speed allowed on the road section. " However, Article 8 (2) also states that "in the event of a traffic jam, small cars may not be subject to the restrictions of paragraphs 1 and 3 of the preceding paragraph." 
+⚖️ Besides, according to the Road Traffic Management and Penalty Act, if vehicle drivers fail to drive on the inner lanes as required, they shall be fined from NT$3,000 to NT$6,000. The National Highway Police Bureau (NHPB) issued more than 36,000 tickets against such violators from 2017 to 2019. Hence, Hon’s proposal to regard the inner lanes as the passing lanes not only has a legal basis but also has aligned with the enforcement measures of recent years. 
 
- ⚖️ According to the Road Traffic Management Penalty Regulations, if a car driver fails to drive in the inner lane in accordance with regulations, a penalty of 3,000 to 6,000 yuan may be imposed. The National Highway Police Department also issued more than 36,000 tickets for these violations between 2017 and 2019. In summary, "Hon" hopes to implement the inside lane as a passing lane, which is not only based on law, but also consistent with the direction of law enforcement in recent years. 
+⛰️ However, Taiwan has its reasons for setting freeway speed limits. On the one hand, they need to consider the downtown section and the complex terrain, such as plains, hills, and plateaus, which results in numerous bends. Therefore, it’s hard to allow an infinite speed. On the other hand, the Institute of Transportation, MOTC, released “An analysis of traffic accidents before and after the freeway speed limit adjustment” in 2004. One of the conclusions in this analysis is that “The A1 accident rate of the road sections with a higher speed limit is indeed greater than that of the road sections whose speed limit is not adjusted (A1 is defined as 'the traffic accidents that cause people to die on the scene or within twenty-four hours.').” In other words, whether to cancel the speed limit for the inner lanes or raise the speed limit for the middle lanes remains to be discussed. 
 
- ⛰️ However, on the one hand, the design of Taiwan's expressway speed limit must consider passing through complex terrains such as urban areas, plains, hills, and terraces, which results in more curves and it is difficult to make the speed limit "infinite"; another On the other hand, the Transportation Research Institute of the Ministry of Communications also conducted "Analysis of Traffic Accidents Before and After Freeway Speed Limit Adjustment" in 2004. One of the conclusions was that "the A1 accident rate of high-speed limit sections is indeed higher than that of unadjusted sections" "(A1 is defined as" a traffic accident that caused death of a person on the spot or within 24 hours "). In other words, there is still room for discussion whether to cancel the speed limit on the inner lane or increase the speed limit on the centerline. 
+🙋 Concerning the above information and consideration, the Public Digital Innovation Office (PDIS) of the Executive Yuan, which is my office, and the two responsible units, that is, the NHPB and the Freeway Bureau (FB), convened a collaboration meeting on March 6th to discuss the core issue of “How to give priority to the inner lanes for vehicle overtaking and allow vehicles to run at the highest speed limit under normal traffic to improve the freeway traffic flow and the safety of users?” Interested parties were invited to the discussion. 
 
- 🙋 Based on the above considerations, my office (Public Digital Innovation Space of the Executive Yuan, PDIS) and two co-responsible units, namely the National Highway Police Station and the Highway Bureau, took "how to implement the inner lane as Overtaking is used preferentially, and it is necessary to drive at the highest speed under normal traffic flow, in order to improve the smoothness of highway traffic and the safety of passersby? "As the core question, a collaboration meeting was held on March 6 this year to invite multi-stakeholders have a discussion. 
-
- 🔢 The main gains of this meeting were to promote the release of more statistical data from the Highway Bureau, as a reference for the National Highway Police Bureau to strengthen scientific and technological law enforcement in the future, and improve the efficiency of police force distribution. It is also for the parties to further explore and publicize Opportunities for the "Inner Expressway Lanes Are Overtaking Lanes" policy. 
+🔢 The meeting was successful. First, participants could further explore and promote the rationality of the policy according to which the inner lanes on the freeways are the passing lanes. Second, it urged the FB to release more statistical data that can serve as a reference for the NHPB to ramp up its technology-based law enforcement and increase the efficiency of the police force distribution.
