--- a/_i18n/en/_posts/2020-04-08-讓隔離沒有距離.md
+++ b/_i18n/en/_posts/2020-04-08-讓隔離沒有距離.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "Shang and Zhou Columns: Isolation has no distance"
-  excerpt: "No matter where you are, everyone can collaborate with the world and solve problems by eliminating space restrictions through the Internet."
+  title: "Collaboration across physical distance"
+  excerpt: "No matter where you are, the internet can break down the barriers of distance and everyone can work with the rest of the world to solve problems."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/0/0be2fcf663a2453fc8c33acd4ff14c8a6d392764_2_1370x1000.png"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🏫 Faced with the spread of the epidemic, the world feeling tense and nerves are frayed. In order to prevent the spread of infection in groups, companies started distance work and schools prepared online courses. Recently, the Central Epidemic Command Center also proposed to suspend gatherings of more than a hundred people indoors and more than five hundred people outside. 
 
- 🏫 Faced with the spread of the epidemic, the whole world is tense. In order to avoid group infections, the company has opened long-distance work and schools have prepared online courses. Recently, the Central Epidemic Command Center also proposed to suspend assembly activities for more than 100 people indoors and more than 500 people outdoor. 
+🏠 How to set up gatherings over long distances, both safety and with high-quality communication, is a problem the whole world is trying to save. The Hack at Home! hackathon, set up by the Taiwan citizen technology group g0v in March, has contributed a good example.
 
- 🏠 How to conduct a remote rally with both safety and quality is a problem that the world is trying to solve. The Taiwanese citizen science and technology community g0v "Home Hackathon" organized by the Zero Hour Government in March has contributed a good example. 
+🎨 As one of the three largest open source technology groups in the world, g0v's in-person hackathon, held every two months, is a vital time for community participation. At the hackathon location, anyone can take three minutes to present their proposal, and then find like-minded partners to work on it together. For example, the fact-checking information LINE  chatbot "Cofacts", or the Ministry of Education's Mandarin dictionary, "moedict", which I participated in, all originated from g0v hackathons. 
 
- 🎨 As one of the world's three largest open source citizen technology communities, the g0v physical hackathon held every two months is a crucial time for community participation. At the hackathon site, anyone can use the three-minute time to quickly report on the proposal they want to make and find a like-minded partner to complete together. For example, the "true and false Cofacts" LINE robot that provides fake messages to clarify the pipeline, or the project "Meng Dian" of the Mandarin Dictionary of the Ministry of Open Education that I participated in, all originated from the g0v hackathon. 
+☑️ In February of this year, in light of the increasing severity of the epidemic, the g0v community decided to "advance deployment", and confirmed through an open vote that the March hackathon would be changed to "Hack at Home!", with online participation. 
 
- ☑️ In February this year, in view of the increasing severity of the epidemic, the g0v community decided to "advance deployment", through open voting to confirm that the March hackathon was changed to the online participation "home pine". 
+🍕 However, these hackathons easily draw hundreds of participants, and there are even many participants from the international community. How to ensure a stable connection, and to maintain an atmosphere of participation is the key to the success of "Hack at Home!". 
 
- 🍕 However, usually hackers loose hundreds of people to participate, and even there are many international community participants. How to ensure a stable connection and maintain the participation atmosphere is the key to the success of home pine. 
+🎥 In this regard, the participant Ronny used the open-source software Jitsi Meet to set up an online conference room, and integrated the writing tool HackMD, allowing participants to write code together on Slack while watching the live broadcast in real-time.  To make discussions and feedback more immediate and meet the discussion needs of different projects, "Hack at Home" also provided a streaming channel at the same time, so that interested participants could talk on their own. 
 
- 🎥 In this regard, participant Ronny uses the open source software Jitsi Meet to set up an online meeting room, and integrates the pen writing tool HackMD, so that participants can watch the live broadcast while writing in real time, and the text on Slack is concatenated into the live broadcast The barrage makes the discussion and feedback more immediate; in order to meet the discussion needs of different projects, "Home at Home" also provides a simultaneous online distribution channel, so that interested participants can discuss separately. 
+🌐 In the end, "Hack at Home" was an unforgettable day for more than 150 participants from Japan, South Korea, Singapore, Hong Kong, and the United States. This set of connection mechanisms using open source software and totally self-developed components has even attracted community partners including the Association for Progressive Communications and Mozilla.
 
- 🌐 In the end, "Home Relaxation" let more than 150 participants from Japan, South Korea, Singapore, Hong Kong and the United States and other countries spend a memorable day. This set of connection mechanisms using open source software and comprehensive self-developed components has also attracted community partners including internationally well-known Internet rights organizations Association for Progressive Communications and Mozilla to come and ask for construction methods. 
+👐 No matter where you are, the internet can break down the barriers of distance and everyone can work with the rest of the world to solve problems. "Collaboration across physical distance, contribute solutions to the pandemic." That is the inspiration I got from participating at "Hack at Home!" that day. 
 
- 👐 No matter where you are, everyone can collaborate with the world and solve problems by eliminating space restrictions through the Internet. "Let the isolation have no distance and contribute ideas for epidemic prevention." This is the inspiration to me from participating in "Relax at Home" that day. 
-
- 🙏 (Thanks to the g0v community participants Ronny Wang and Xiaoban for their contributions to this article.) 
+🙏 (Thanks to g0v community participants Ronny Wang and ael for their contributions to this article.)
