--- a/_i18n/en/_posts/2020-03-15-口罩實名制的政策權衡.md
+++ b/_i18n/en/_posts/2020-03-15-口罩實名制的政策權衡.md
@@ -24,3 +24,6 @@
 🎲 The focus here is that the software system will use random numbers to automatically generate the collection list, which in terms of technology, satisfies requirements for fairness. However, it might not be able to meet the high level of social demands for transparency. In comparison, public lottery, while rather primitive, is actually more trustworthy.
 
 ℹ️ Finally, the preorder website uses a registration system instead of a “first come, first served” queuing system. By this, we hope lower the pressure on the system, so that those few people with the ability to write ticket snatching computer programs would not crowd out the rights of other people.
+p
+
+(Postscript: Since April 9th, each set has been changed to 14 pieces for two weeks. No lottery has been needed so far, and all pre-orders have been successful.)
