--- a/_i18n/zh-TW/_posts/2020-03-15-口罩實名制的政策權衡.md
+++ b/_i18n/zh-TW/_posts/2020-03-15-口罩實名制的政策權衡.md
@@ -24,3 +24,5 @@ tags:
 🎲 重點在於，軟體系統固然可用亂數方式自動產生取貨名單，單就技術來說，可以滿足「公平性」。但在「透明度」方面，就可能無法滿足高度的社會需求。相較之下，公開抽籤雖然「原始」，反而更為實用。
 
 ℹ️ 最後，「口罩實名制 2.0」的預購採「登記制」而非「排隊制」，不是先到先贏的原因在於：一方面希望能夠分散人流，降低系統負載壓力；另一方面，也是要避免少數有能力寫搶票程式的朋友，排擠了其他人的權利。
+
+（後記：自 4 月 9 日開始，已改為兩周 9 片，實施迄今皆不用抽籤，全數預購成功。）
