--- a/_i18n/en/_posts/2020-04-16-二十一世紀的古典價值.md
+++ b/_i18n/en/_posts/2020-04-16-二十一世紀的古典價值.md
@@ -1,66 +1,68 @@
 ---
   layout: "post"
-  title: "Radical market to advance Datong: the classical value of the 21st century"
-  excerpt: "For Taiwanese, these practices are not only radical, but also classical values that already exist in society. therefore"
+  title: "Radical Markets achieves the Great Unity: Classical value of the twenty-first century"
+  excerpt: "For Taiwanese people, all these embody the classical value that already exists in their community rather than being radical approaches."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/9/997ce7f4a6d8b61e62021dfad4ce3707a995f42b_2_1380x920.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+Two years ago, Glen Weyl and Eric Posner jointly published the Radical Markets, which triggered extensive discussions and responses. According to Glen and Eric, when it comes to public affairs, people tend to disagree and refuse to share information they keep to themselves. If a well-designed market mechanism is in place to make more people willing to express their true ideas in public, then the communities can work together to find more proper solutions.
 
- Two years ago, Glen Weyl and Eric Posner co-authored "Radical Markets (Radical Markets)", which caused extensive discussion and repercussions. Glen and Eric believe that in the face of public affairs, people often hold their own opinions and are reluctant to share information that only they know. If a well-designed market mechanism can be used to encourage more people to express their true ideas publicly, society can work together to find a better solution. 
+Based on the idea of promoting public interest with a market mechanism, they selected social issues from five different fields and came up with five proposals through the mechanism design. Now the introduction of a traditional Chinese version of the book, in my opinion, is meaningful for Taiwanese readers.
 
- Based on the idea of "promoting public interest through market mechanisms", they selected five social issues in different fields and designed five proposals through mechanism design. Nowadays, this book is launched in Chinese, and I think it is really meaningful for Taiwanese readers. 
+Promote capital flow via an auction system
 
- #### Using an auction system to promote asset flow 
+Why is it meaningful? Take the Common Ownership Self-Assessed Tax (COST) of Chapter 1 for example. People may attach to their properties any value they want, but they must pay a certain percentage of tax every year. Once someone offers to purchase the properties according to the value they set, the property owners cannot refuse it.
 
- Why is it meaningful? In Chapter 1, "Common Ownership Self-Assessed Tax (COST)", the specific method is to let people set the price of assets themselves, but they must pay a certain percentage of tax every year. Once someone is willing to buy at the price, the asset holder cannot refuse. 
+No doubt, Taiwanese people cannot be more familiar with such practice because it extends what's proposed by Sun Yat-sen—"Equalization of land rights." This concept holds that all landowners should assess the increased value of their land deriving from the common development of a community, and announce the land value they assess every year.
 
- This is undoubtedly a practice that Taiwanese are no longer familiar with, because this is the extension of the "average land rights" proposed by Sun Wen. The concept of average land rights is to let each holder evaluate the value of the land because of the joint development of the community, and announce the value of the land he has assessed every year. 
+If the estimated value is on the high side, the landowners need to pay higher taxes, which is taxation according to the declared land value. If the assessed value is lower than the actual reasonable value, the government may purchase the land at such value, which represents the government purchase of land according to the declared land value.
 
- If the value is overestimated, a higher tax must be paid, that is, the tax is levied at the price, and if the estimated value is lower than the actual reasonable value, the government can use the valuation to buy it. Levy. 
+However, it is the government that decides whether or not to purchase the land according to the declared value. If the government does not take action, the land value will be meaningless. Yet, with a COST, anyone may purchase it at the declared price. Therefore, it becomes an auction system. Because of fixed taxes and the market mechanism, the possessors are willing to disclose the real value of their properties, thus facilitating the sufficient application of properties and also preventing stockpiling.
 
- However, this set of practices can only be decided by the government whether to buy at the price. If the government does not act, the value of the land will not be determined. COST is adjusted so that anyone can buy at the quoted price, which means it becomes an "auction system." Through fixed taxation and market mechanisms, making holders willing to disclose the true value of assets can promote the full use of assets while preventing hoarding. 
-| #### New-style democratic governance 
+A new type of democratic governance
 
- Another mechanism that has been operating in Taiwan is the “Quadratic Voting (QV)” discussed in Chapter 2. The original intention of QV's design stems from the majority decision currently used in the world. It is easy to form strategic votes such as waiver of insurance, which cannot reveal the true preferences of individuals. The design of one person one vote often cannot effectively reflect the strength of opinions. 
+Another mechanism that operated in Taiwan is Quadratic Voting (QV) mentioned in Chapter 2. QV was initially designed to solve the following problems: the universally adopted majority rule is likely to cause strategic voting and thus cannot reveal the true preferences of individuals. Besides, the "one man, one vote" system cannot effectively demonstrate the strength of opinions.
 
- The QV system of "the more concentrated the voting, the more points must be paid", so that the marginal utility of each vote is exactly equal to the marginal cost. In order not to waste costs, people are more motivated to vote according to their actual preferences, thereby making the discussion of public issues more quality. 
+The QV system, in which more credits need to be spent for more intense votes, allows the marginal utility of every vote to be exactly equal to the marginal cost. Then, it gives people greater motivation to vote according to their actual preferences to avoid wasting costs. Furthermore, the discussion of public topics will have a higher quality.
 
- Taking Taiwan ’s President ’s Cup hackathon as an example, starting in 2019, we all use QV to vote for proposals. Each participant gets 99 points. One vote for a proposal is only 1 point, two votes need 4 points, and three votes need 9 points. In other words, the number of points each person pays is the square of the number of votes. 
+Take Taiwan's Presidential Hackathon for example. Since 2019, we have started using QV to vote for proposals. Each participant will get 99 credits. One vote costs one credit; four credits will buy two votes, and nine credits will buy three votes. In other words, the cost of a number of votes is its square in credits.
 
- In the voting process of the President ’s Cup hackathon, we observed that even though people will allocate their own votes, but because of the limited number of points and the high cost of ticketing, they will not let the votes be too concentrated, so avoid The result of polarization. 
+We noticed that during the voting of the Presidential Hackathon people tried to avoid concentrated votes and polarized results, although they allocated their votes. It's because they have limited credits, and the cost of ballot stuffing is quite high.
 
- Another example worth reading outside of Taiwan is that in 2019, the House of Representatives in Colorado adopted QV to vote on budget allocation, setting a milestone in a new form of democratic governance. The advantage of using QV is that each member of Parliament is more acceptable to such a result, because each member of Parliament tends to diversify into several different budgets, even if only one or two of them are passed, they also have contributed contributions. 
+Outside Taiwan, there's a case that readers may learn about. In 2019, the House of Representatives in Colorado adopted QV to vote for the budget distribution. This set a milestone for the new type of democratic governance. The good thing about QV is that senators find such an outcome acceptable because senators prefer voting for several different budget bills. That way, even if only one or two bills are passed in the end, they will be deemed to have contributed to it.
 
- #### Data of labor cooperatives 
+Labor Cooperative of Data
 
- From the link between average land rights and COST, to the President ’s Cup hackathon QV, we can see that the innovation of social and democratic systems is rare in Taiwan. thing. 
+Through the connection between equalization of land rights and COST, and the implementation of QV by the Presidential Hackathon, you can see that social and democratic system innovation is a common thing in Taiwan.
 
- I think another practice that has the most opportunity to experiment in Taiwan is Chapter 5, "Data is Labor." In Taiwan, cooperatives and mutual aid cooperatives have a long tradition. The original intention of the cooperative was that instead of having a boss, a group of workers gathered together to decide which different jobs to take in a democratic way. The benefits created by people with different expertise must be greater than individual jobs, and it can also increase the average income of each person. This is called a labor cooperative. 
+In my view, another practice that will probably be experimented with in Taiwan is "Data as Labor" discussed in Chapter 5. Cooperatives and mutual aid societies are well-established traditions in Taiwan. It's better to bring together a group of workers to determine what different tasks to undertake, rather than have a boss to decide everything. It is why the cooperative was established in the first place. The benefits created by people with different expertise are certainly greater than those by a single person. Besides, it can increase the average income per person. This is the so-called labor cooperative.
 
- The concept of "data is labor" is actually similar to a labor cooperative. For example, the "air box" developed by the Chinese Academy of Sciences and a private team that can be used to monitor air quality is to open the public to participate in adoption. After the air box is spread all over Taiwan, the data is published on the zero-time air pollution observation network, so that everyone has another channel You can understand the actual air quality of Taiwan without relying entirely on the measurement stations of the Environmental Protection Agency. From this example, we can see that when data services are organized, this value is unlimited, and various uses will occur. 
+The concept of "Data as Labor" is similar to the labor cooperative. For example, the AirBox devices that represent the cooperation of the Academia Sinica and non-governmental organizations and that can monitor air quality are distributed across Taiwan via public adoption. The collected data is announced on the air pollution observation website (https://airmap.g0v.tw/). Therefore, the public may keep abreast of the air quality of Taiwan through another channel without completely relying on the monitoring station of the Environmental Protection Administration. As you can see, when data labors are organized, their value is infinite, and they will be utilized in varied ways.
 
- The premise of this approach is that everyone regards themselves as producers of data. I have the right to request copies, amendments, deletions, etc. of my own assets at any time. In this way, we There will be new partnerships. For example, recently, because of the demand for online purchases of masks, many people have downloaded the Health Insurance Department's "Healthcare Express" and found that the original records of the masks can be obtained at any time. On this basis, we can think about related applications, such as sharing the amount we have not received to the Ministry of Foreign Affairs as a proof of donation of international medical personnel. This allows direct feedback on the value of data, which is the most important meaning of "data as labor". 
-| --- 
+The prerequisite for such practice is that all individuals regard themselves as the producers of data and that they have the right to copy, modify, or delete their personal assets at any time. In this way, a new cooperative relationship will emerge. For instance, due to the recent demand for online purchase of face masks, many people have downloaded the mobile application of the National Health Insurance Administration and found that they may have access to their face mask taking records whenever they want to. On this basis, we can consider its application. For example, we can share the unused quotas with the Ministry of Foreign Affairs as donations to the international medical workers. The records on the mobile application will be the proof. Hence, we provide direct feedback on the data value, which is the most important significance of "Data as Labor."
 
- The above only introduces the three methods in the book, and the rest include the "Visas Between Individuals Program (VIP)" to improve immigration through the introduction system and the "Visas Between Individuals Program (VIP)" It is forbidden for the consortium to diversify its holdings in the same field. " 
+＊＊＊
 
- In my opinion, the inspiration from Taiwan ’s experience to the world lies in our field experiments in life, making these theories a practical tool. Whether it is a student association, a management committee, an enterprise, or a government department, as long as new organizations or projects emerge, we can use or even evolve these participation mechanisms. 
+What's introduced above are three methods from the book. Also, there is the Visas Between Individuals Program (VIP) that improves the issue of migrants through the sponsoring system and the method of prohibiting institutional investors from diversifying in the same industry to avoid the monopoly of capitalists. All these approaches deserve to be studied in depth by all.
 
- For example, in order to promote these methods, Glen founded the non-profit organization RadicalxChange (RxC), and I was invited to serve as a director. In the board of directors we convene every quarter, we vote with QV. Each director has 100 voting points, and anyone can propose a motion. Everyone can vote for or against the motion. The unused points can be depreciated and accumulated to the next quarter. This not only ensures that the adopted proposals are in line with the true wishes of the directors, but also promotes better discussion quality. 
+As far as I can see, what the world can learn from Taiwan's experience is that it carries out field experiments and turns these theories into practical tools. From the Taiwan Scholar Association and the Management Commission to the enterprises and government departments, as long as they have a new organization or project, we can apply and even improve these participation mechanisms.
 
- On the basis of "Radical Market", RxC continues to study how to use these mechanism designs to solve the problem of resource allocation that the market and the government cannot handle at present. For example, Vitalik Buterin, the founder of Ethereum and a director of RxC, developed the Quadratic Funding (QF) method based on QV. 
+For example, Glen set up RadicalxChange (RxC), a non-profit organization, to spread these approaches, and I was invited to serve on the board. At the quarterly board meetings, we vote for the proposals in the form of QV. Each board member has 100 voice credits. Anyone may propose a motion and everyone can vote for or against that motion. The remaining credits can be used next quarter on a discount basis. In this way, it not only ensures that the approved proposals represent the true intention of the board members but also facilitates discussions of higher quality.
 
- This new fund-raising mechanism is designed to solve the problem of “free riders” that often appear when people use public finances. At present, the blockchain platform Gitcoin is about to experiment to the fifth round. Interested readers can refer to the paper "Liberal Radicalism: Formal Rules for a Society Neutral among Communities" co-authored by Vitalik, the author of this book, Glen and Dr. Zoë Hitzig of Harvard Economics, and Vitalik based on the analysis of the Gitcoin experiment "Review of Gitcoin Grants Analysis Report" (Review of Gitcoin Quadratic Funding Round 4). 
-| #### Conclusion 
+RxC, based on the Radical Markets, keeps studying how to use these mechanism designs to address the problem of resource allocation that both the market and the government fail to resolve. Vitalik Buterin, the founder of Ethereum and also the board member of RxC, developed the quadratic funding (QF), using the QV system.
 
- Overview of history, there are new thoughts in every era to promote social innovation. The theories and tools extended by these thoughts are important ways to improve the human situation. 
+This novel funding mechanism is designed to solve the free-rider problem that often occurs in the process of using public goods. It will go through the Round 5 experiment on the blockchain platform called Gitcoin. Interested readers may refer to the essay "Liberal Radicalism: Formal Rules for a Society Neutral among Communities," that was jointly written by Vitalik Buterin, Glen Weyl, the author of this book, and Zoë Hitzig, a Ph.D. in economics at Harvard University, and the "Review of Gitcoin Grants Quadratic Funding Round 4", an analysis of Vitalik Buterin according to the Gitcoin's experiment.
 
- After sorting out the Taiwan experience, I found that "Radical Market" not only provides a batch of brand-new tools, but the seemingly radical proposals in the book are more like a new activation of the traditional "Great Harmony". 
+Conclusion
 
- The concept of letting the production results and wealth be used by everyone, rather than private possession for one ’s own use, is what is said in the “Lantun Datong” article: “Goods are abandoned to the ground, and they do not need to be hidden in their own” ; Everyone uses all of his own to give substantial feedback and contribution to public issues, and it also embodies the spirit of "strengthening it not to do it out of the body, nor to be your own". 
+Throughout history, new ideological trends have emerged to boost social innovation in all ages and bring forth theories and tools that serve as an important means of improving human situations.
 
- For Taiwanese, these practices are not only radical, but also a classical value that already exists in society. Therefore, I sincerely hope that the publication of the Chinese version of Orthodox will create more speculation and discussion, so that the "classical value of the twenty-first century" will become a new chapter in the "Great World". 
+After sorting out Taiwan experience, I realized that the Radical Markets has not just provided a batch of brand-new tools. More importantly, these seemingly radical proposals in the book are more like the activation of the traditional concept of Great Unity.
+
+They encourage all people to properly apply the production results and wealth instead of hiding them for their own purposes. This echoes with what's described in the World of Great Unity, "People hate to see resources lying idle or cast away, but they do not necessarily keep them for themselves." Individuals use what they have to offer substantial feedback on and contributions to public topics. This manifests the spirit of "They hate not to make use of their abilities, but they do not necessarily work for self-interest."
+
+For Taiwanese people, all these embody the classical value that already exists in their community rather than being radical approaches. Hence, I sincerely hope that the publication of the traditional Chinese version can spawn more intellectual inquiries and discussions and start a new chapter of the World of Great Unity with the classical value of the twenty-first century.
