--- a/_i18n/en/_posts/2020-04-16-二十一世紀的古典價值.md
+++ b/_i18n/en/_posts/2020-04-16-二十一世紀的古典價值.md
@@ -13,7 +13,7 @@ Two years ago, Glen Weyl and Eric Posner jointly published the Radical Markets, 
 
 Based on the idea of promoting public interest with a market mechanism, they selected social issues from five different fields and came up with five proposals through the mechanism design. Now the introduction of a traditional Chinese version of the book, in my opinion, is meaningful for Taiwanese readers.
 
-Promote capital flow via an auction system
+#### Promote liquidity via an auction system
 
 Why is it meaningful? Take the Common Ownership Self-Assessed Tax (COST) of Chapter 1 for example. People may attach to their properties any value they want, but they must pay a certain percentage of tax every year. Once someone offers to purchase the properties according to the value they set, the property owners cannot refuse it.
 
@@ -23,7 +23,7 @@ If the estimated value is on the high side, the landowners need to pay higher ta
 
 However, it is the government that decides whether or not to purchase the land according to the declared value. If the government does not take action, the land value will be meaningless. Yet, with a COST, anyone may purchase it at the declared price. Therefore, it becomes an auction system. Because of fixed taxes and the market mechanism, the possessors are willing to disclose the real value of their properties, thus facilitating the sufficient application of properties and also preventing stockpiling.
 
-A new type of democratic governance
+#### A new type of democratic governance
 
 Another mechanism that operated in Taiwan is Quadratic Voting (QV) mentioned in Chapter 2. QV was initially designed to solve the following problems: the universally adopted majority rule is likely to cause strategic voting and thus cannot reveal the true preferences of individuals. Besides, the "one man, one vote" system cannot effectively demonstrate the strength of opinions.
 
@@ -35,7 +35,7 @@ We noticed that during the voting of the Presidential Hackathon people tried to 
 
 Outside Taiwan, there's a case that readers may learn about. In 2019, the House of Representatives in Colorado adopted QV to vote for the budget distribution. This set a milestone for the new type of democratic governance. The good thing about QV is that senators find such an outcome acceptable because senators prefer voting for several different budget bills. That way, even if only one or two bills are passed in the end, they will be deemed to have contributed to it.
 
-Labor Cooperative of Data
+#### Labor Cooperative of Data
 
 Through the connection between equalization of land rights and COST, and the implementation of QV by the Presidential Hackathon, you can see that social and democratic system innovation is a common thing in Taiwan.
 
@@ -45,7 +45,7 @@ The concept of "Data as Labor" is similar to the labor cooperative. For example,
 
 The prerequisite for such practice is that all individuals regard themselves as the producers of data and that they have the right to copy, modify, or delete their personal assets at any time. In this way, a new cooperative relationship will emerge. For instance, due to the recent demand for online purchase of face masks, many people have downloaded the mobile application of the National Health Insurance Administration and found that they may have access to their face mask taking records whenever they want to. On this basis, we can consider its application. For example, we can share the unused quotas with the Ministry of Foreign Affairs as donations to the international medical workers. The records on the mobile application will be the proof. Hence, we provide direct feedback on the data value, which is the most important significance of "Data as Labor."
 
-＊＊＊
+---
 
 What's introduced above are three methods from the book. Also, there is the Visas Between Individuals Program (VIP) that improves the issue of migrants through the sponsoring system and the method of prohibiting institutional investors from diversifying in the same industry to avoid the monopoly of capitalists. All these approaches deserve to be studied in depth by all.
 
@@ -57,7 +57,7 @@ RxC, based on the Radical Markets, keeps studying how to use these mechanism des
 
 This novel funding mechanism is designed to solve the free-rider problem that often occurs in the process of using public goods. It will go through the Round 5 experiment on the blockchain platform called Gitcoin. Interested readers may refer to the essay "Liberal Radicalism: Formal Rules for a Society Neutral among Communities," that was jointly written by Vitalik Buterin, Glen Weyl, the author of this book, and Zoë Hitzig, a Ph.D. in economics at Harvard University, and the "Review of Gitcoin Grants Quadratic Funding Round 4", an analysis of Vitalik Buterin according to the Gitcoin's experiment.
 
-Conclusion
+#### Conclusion
 
 Throughout history, new ideological trends have emerged to boost social innovation in all ages and bring forth theories and tools that serve as an important means of improving human situations.
 
