--- a/_i18n/zh-TW/_posts/2020-04-16-二十一世紀的古典價值.md
+++ b/_i18n/zh-TW/_posts/2020-04-16-二十一世紀的古典價值.md
@@ -28,7 +28,7 @@ tags: [社會創新]
 
 「投票越集中就必須付出越多點數」的 QV 制度，讓每一票的邊際效用，剛好等於邊際成本。人們為了不浪費成本，便更有動機根據自己實際的偏好投票，進而讓公共議題的討論更有品質。
 
-以臺灣的總統盃黑客松為例，2019 年開始，我們都是運用 QV 進行提案票選。每位參與者各獲得99點，想對某個提案投一票只要 1 點，投兩票需要 4 點，三票需要 9 點，換言之，每個人付出的點數是票數的平方。
+以臺灣的總統盃黑客松為例，2019 年開始，我們都是運用 QV 進行提案票選。每位參與者各獲得 99 點，想對某個提案投一票只要 1 點，投兩票需要 4 點，三票需要 9 點，換言之，每個人付出的點數是票數的平方。
 
 在總統盃黑客松的投票過程中，我們觀察到，縱使人們會自行配票，但因為點數有限，加上灌票成本非常高，所以不會讓票數過度集中，因此避免極化的結果。
 
@@ -42,7 +42,7 @@ tags: [社會創新]
 
 「數據即勞務」的概念，其實就類似勞動合作社。例如中研院與民間團隊合作開發、可用來監測空氣品質的「空氣盒子」，就是透過開放民眾參與認養，讓空氣盒子遍布全臺灣後，將數據公開在零時空汙觀測網，讓大家有另一個管道可以了解臺灣實際的空氣品質，而不用完全依賴環保署的測量站。從這個例子我們就可以看到，當數據的勞務組織起來的時候，這個價值就是無限的，而且會出現各種各樣的利用。
 
-這個做法的前提是，每個人都把自己看作資料的產製者，我對於自己的個資擁有隨時可以去請求副本、修改、刪除等等的權利，如此一來，我們就會有新的合作關係出現。例如，近來因為口罩網購的需求，許多人因此下載了健保署的「健保快易通」，發現原來領取口罩的記錄，自己可以隨時取得。在這個基礎上，我們便可以思考相關應用，例如將自己未領取的額度分享給外交部，作為捐贈國際醫護人員的憑據。這讓數據的價值獲得直接的回饋，也就是「數據即勞務」最重要的意義。
+這個做法的前提是，每個人都把自己看作資料的產製者，我對於自己的個資擁有隨時可以去請求副本、修改、刪除等等的權利，如此一來，我們就會有新的合作關係出現。例如，近來因為口罩網購的需求，許多人因此下載了健保署的「健保快易通」，發現原來領取口罩的記錄，自己可以隨時取得。在這個基礎上，我們便可以思考相關應用，例如將自己未領取的額度分享給外交部，作為援助國際醫護人員的憑據。這讓數據的價值獲得直接的回饋，也就是「數據即勞務」最重要的意義。
 
 ---
 
