* add editor's notes

--- a/_i18n/zh-TW/_posts/2020-04-16-二十一世紀的古典價值.md
+++ b/_i18n/zh-TW/_posts/2020-04-16-二十一世紀的古典價值.md
@@ -8,7 +8,7 @@ category: blog
 tags: [社會創新]
 ---
 
-兩年前，Glen Weyl 和 Eric Posner 合著出版《Radical Markets（激進市場）》，引發廣泛討論和迴響。Glen 和 Eric 認為，面對公共事務，人們往往各持己見、不願分享只有自己知道的資訊。如果能透過精心設計的市場機制，促使更多人願意公開表達真正的想法，社會就能共同找出更妥善的解方。
+兩年前，Glen Weyl 和 Eric Posner 合著出版《Radical Markets》（編注：Radical 可譯為〔根基＋積極進取〕，故也可稱「基進市場」），引發廣泛討論和迴響。Glen 和 Eric 認為，面對公共事務，人們往往各持己見、不願分享只有自己知道的資訊。如果能透過精心設計的市場機制，促使更多人願意公開表達真正的想法，社會就能共同找出更妥善的解方。
 
 基於「透過市場機制促進公共利益」的想法，他們選擇了五個不同領域的社會問題，透過機制設計，設計出五種提案。如今，這本書推出正體中文版，我認為對於臺灣讀者來說，確實別具意義。
 
