--- a/_i18n/en/_posts/2020-04-17-協力對抗不實訊息，民主彩球再度飛舞.md
+++ b/_i18n/en/_posts/2020-04-17-協力對抗不實訊息，民主彩球再度飛舞.md
@@ -1,39 +1,40 @@
 ---
   layout: "post"
-  title: "Together to fight against false information, the democracy colored balls are flying again"
-  excerpt: "The same citizen-centric logic is also used in media literacy teaching."
+  title: "COGOV: Rebalancing Juggling Balls of Democracy against Disinformation"
+  excerpt: "The same logic of citizen-centered service design is also applicable to the cultivation of media competence."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/b/b767afb58e1e32b1b9eb887707412b1a6db06188_2_1380x886.jpeg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🤹 The politics of democracy are dynamic and full of vitality, but like juggling, they require precise balance to prevent the ball from crashing to the ground. On one side of the balance is the power of the state with its vast resources and organizations, though it requires the legitimacy of governance. On the other side are the people, who claim to be the masters and who possess the ultimate power, but often create a lot of noise. This leads us to a dilemma between expecting the government to be competent, yet not wanting to be free of its hold on us; and between encouraging social diversity, yet wanting to succeed together.
 
- 🤹 Democracy is dynamic and full of vitality, but like juggling artists tossing and receiving the ball, it needs a high degree of balance to prevent the flying colored balls from falling. On one side of the moment is state power, with huge resources and organizations, but the justification of governance is needed; on the other side is the people who claim to be the masters, who have the ultimate power, but there is always a lot of noise, so we face a dilemma: expecting the government to be able, but I don't want the escape to take hold; I expect the society to be pluralistic, but I don't want to achieve nothing. 
+⚖️ Modern-day constitutionalism offers checks and balances through the separation of powers, and parliamentary politics and media freedom ensure a diversity of views and consolidate public opinion. Democracy relies on these mechanisms to build up mutual trust so that the ball suspended in flight will not land.
 
- ⚖️ Contemporary constitutionalism, on the one hand, checks and balances each other through the separation of powers, on the other hand, it uses parliamentary politics and media freedom to ensure diverse opinions but can unite public will. Democracy relies on these mechanisms to build mutual trust and let the ball fly in the air. Won't land. 
+📢 Freedom of speech is, without a doubt, a crucial cornerstone in this trust mechanism, and speech must be transparent and authentic. The danger of disinformation is obvious: saying the wrong thing or lying is often easier than telling the truth; thus, the saying that "a lie can travel halfway around the world while the truth is putting on its shoes."
 
- 📢 In this trust mechanism, freedom of speech is undoubtedly an important cornerstone, and speech must be transparent and true. The harm of wrong messages is obvious, and it is easier to say the wrong thing or lie than to tell the truth, otherwise there will be no saying "A lie can travel half while the truth is still wearing shoes." way around the world while the truth is putting on its shoes. "). 
+📰 Traditionally, we rely on the parliament and the media as gatekeepers to maintain the delicate balance of this ecosystem.
 
- 📰 Traditionally, we have relied on Congress and the media as gatekeepers to maintain the delicate balance of this ecosystem. 
+🌐 The Internet has brought about enormous changes. Receiving information, expressing opinions, and even mobilizing the masses no longer require the parliament or the media—anyone can become a public opinion leader, or even part of the media itself — a hashtag on a social media network can start an avalanche.
 
- 🌐 The emergence of the Internet has brought about tremendous changes. Receiving information, expressing opinions and even mobilizing the masses, there is no need to pass through the Congress or the media. Everyone can be a public opinion representative or the media. (Hashtag) can roll up a thousand piles of snow. The already fragile mutual trust is in jeopardy. Unorganized messages that are organized and planned to operate are even more intrusive-using social media information overload, opaque algorithms and other weaknesses, fake messages can be quickly transmitted, and similar content can be continuously fed to strengthen both Opinions are formed, stratospheres are formed, the network speech environment is increasingly clear, barriers to mutual trust are increasingly weak, power imbalances and trust collapse, and democracies are scattered. 
+💥 Mutual trust, already fragile in itself, has become all the more vulnerable. Organized operations to spread untruths take advantage of the weaknesses of social media, such as information overload and algorithm opacity. Disinformation can be disseminated quickly, feeding continuously on similar content, strengthening existing views, and forming alliances of shared opinion. The environment of online discourse is becoming increasingly segregated, the foundations of mutual trust are being gradually eroded, structures of power and trust are collapsing, and the juggling balls of democracy are scattered on the ground.
 
- 💥 The spread of false information has become the Achilles tendon of whether democracy can be well governed. The intuitive response is to protect it through legal control. Singapore passed the "Preventing Untruthful Information and Internet Manipulation Act" ( Protection from Online Falsehoods and Manipulation Act), which gives the government the power to order individuals or the media to remove false messages; the other is typically NetzDG in Germany, which requires major social media to self-censor and prevent the disclosure and make it public. But if the power of delisting is handed over to the executive, wouldn't the front door refuse the tiger and the back door welcome the wolf? It would not be better to be a lingering multinational company. Even if it is entrusted to machine computing, the lack of transparency and checks and balances in business operations and algorithms is more powerful than state power. As a person who maintains its value, it must not be unconscious. alert. 
+🔔 The spread of disinformation has become the Achilles heel for the good governance of democracy. The intuitive response is to introduce protections through legal control. Singapore, for example, has passed the «Protection from Online Falsehoods and Manipulation Act», which offers the government the power to order individuals or the media to remove disinformation. Another case in point is Germany's NetzDG, which requires major social media platforms to self-censor as a check and balance and to remain transparent to the public. Yet doesn’t handing over the power of takedowns to the administration create a new problem in place of the former? Turning to multinational companies alone will not improve things either. Currently, business operations and algorithms lack transparency and checks and balances even more severely than states, so putting machines in the role of a governor is not an option either — especially for a conservative anarchist.
 
- 🔔 The ringer must also be the person who answers the bell. Since the problem comes from the transfer of information from the media to the community, the civil society can only participate in the reconstruction of trust, and it is empowered to the community that anyone can enter and leave at any time. The risk of abuse due to concentration of power is minimal. 
+🔔 It is said that addressing the source of trouble should end it. Since the problem comes from the dissemination of information from the media to the community, it is only by empowering civil society to participate in the reconstruction of trust that social norms may be co-created, that power may be conferred to communities that anyone can enter and leave at any time, and that the risk of abuse from the concentration of power may be minimized.
 
- 📧 Actually, we do n’t lack similar experience. Once spam flooded in every mailbox, it almost formed a doomsday crisis of e-mail, but its redemption does not come from strong legislative control, but in the social Under the group initiative, mail service providers provide users with the right to mark spam. The spam marked by everyone is intercepted by the system to another inbox, but no message is deleted. If it is considered useful information, it can still be found. , And marked as white mail-power will not be concentrated on any person or business, users still retain their autonomy! 
+📧 The relentless outpouring of junk mail that flooded into every mailbox once almost led to a catastrophic email crisis. Yet this problem was not solved through powerful legislative control, but rather through community initiatives that prompted email servers to provide users with the power to mark junk mail. Junk mail that was marked by everyone was then intercepted by the system and moved to a different inbox without any messages being deleted. If the mail was considered useful information, it could still be located again and marked as clean. Therefore, power was not concentrated in the hands of any one person or business, and users retained their autonomy.
 
- 💊 Taiwan ’s approach to counterfeit messages is similar, and it does not rely on legal control. Instead, it urges major social media or information tool companies such as Facebook, LINE, and Google to jointly sign self-regulatory practice guidelines, in addition to establishing technical standards. In addition to protection, enhancing advertising transparency and management, and enhancing user reading ability, it is important to work with third parties to build an independent, transparent, and fair supervision mechanism. 
+💊 Taiwan has taken a similar route in responding to disinformation. Primarily, it does not rely on legal control but rather urges major social media platforms or information tool operators such as Facebook, LINE, and Google to simultaneously sign standards of self-regulatory practice. In addition to establishing protections on the technical front, increasing oversight and transparency on political advertisement, and strengthening media competency across all age groups, it is important to cooperate with third parties to build an independent, transparent, and fair supervision mechanism.
 
- 🔬 Taiwan ’s third-party fact-checking mechanisms, such as the "Taiwan Fact-Checking Center", "Cofacts are real and fake", "MyGoPen" and "Rum Toast" are all private independent organizations, even without fixed members It is conceivable that there is a shortage of human capital. Open citizen participation is also inevitable. Many technical development and fact-finding work are done with the input of volunteers that everyone can participate in. Citizen participation allows friends in these social sectors to stay within reach while working together with the government and enterprises, and maintain internal checks and balances. 
+🔬 Third-party fact-checking mechanisms in Taiwan, such as Taiwan FactCheck Center, MyGoPen, and Rumor & Truth, are mostly independent private organizations. Because they lack manpower and funding, opening up to public participation is inevitable. Many technological developments and fact-checking work were completed by volunteers, for example through the Cofacts project. Public participation allows these social sector contributors to keep a healthy distance while working with the government and businesses and to maintain internal checks and balances.
 
- 📖 The same citizen-centric logic is also used in [Media Literacy Teaching](https://mlearn.moe.gov.tw/). Rather than teaching people or students how to distinguish the tide-like information on the Internet dogmatically, let everyone know that everyone on the Internet can be a media. As a possible self-media worker, they will understand the message more deeply than any audience. Whether it is true or false or not. 
+📖 The same logic of citizen-centered service design is also applicable to the cultivation of media competence. Rather than dogmatically educating students or the people on how to distinguish the Internet’s relentless tide of information, it is much better to help everyone recognize that we on the Internet can act as media and learn to contextualize a piece of information more profoundly.
 
- 🔢 The huge organizations and resources owned by the government provide real-time, correct and easy-to-understand information to the public, and also allow third parties to check it. The Executive Yuan uses the "2-2-2 principle" to expect that all ministries will clarify immediately: 2 hours, within 200 words, 2 pictures (mostly completed within one hour after the disclosure of false information). 
+🔢 Because the government’s organizations and resources are vast, it is incumbent on them to provide timely, accurate, and easy-to-understand information to the public and to allow third parties to fact-check. The Executive Yuan adopts the "2-2-2 principle" in expecting prompt clarifications from each ministry within 2 hours and 200 words, with the inclusion of 2 images (a majority of which are completed within 1 hour after the disinformation is disclosed).
 
- 🤣 Of course, "fun" is also very important, ** meme project **-"try to pack the message into a form that can't help but want to share", so that the correct message can be spread more quickly. When the false message just leaves the front foot, the correct message follows the heel, and it is also bright and bright. Maybe you can catch up without walking half the earth. 
+🤣 Humor plays a crucial role here. **Memetic engineering**—that is, the "package the message in such a way that you cannot help but be tempted to share it"—enables accurate information to be disseminated more quickly. If it is possible for the accurate information to immediately follow disinformation, it can similarly gain just as much traction, a strategy that we call “humor over rumor”.
 
- 🌈 The 2019 United Nations Secretary-General's High-level Digital Cooperation Expert Group Meeting released the "Digital Interdependence Declaration", emphasizing the establishment of a decentralized joint governance structure ("COGOV"). To reconstruct the democratic ecosystem in the digital age, we must change the check-and-balance relationship between the government and the people into a triangular relationship in which the government, enterprises, and people work together and rely on each other. The ecological balance required by a democratic society allows colored balls to have enough kinetic energy to fly smoothly in the air. 
+🌈 In 2019, the United Nations Secretary-General's High-level Panel on Digital Cooperation released a "Declaration of Digital Interdependence," emphasizing the need to establish a decentralized and common governance framework ("COGOV"). To rebuild the democratic ecosystem of the digital age, it is necessary to change the relationship of checks and balances between the government and the people into a three-way relationship in which the government, businesses, and the people work together and depend on one another. It is only this way we can resist the invasion of disinformation and regain the ecological balance a democratic society needs to give the juggling balls in the air the energy they need to freely fly.
