--- a/_i18n/en/_posts/2020-04-16-二十一世紀的古典價值.md
+++ b/_i18n/en/_posts/2020-04-16-二十一世紀的古典價值.md
@@ -43,7 +43,7 @@
 
 🌹 The concept of "Data as Labor" is similar to the labor cooperative. For example, the AirBox devices that represent the cooperation of the Academia Sinica and non-governmental organizations and that can monitor air quality are distributed across Taiwan via public adoption. The collected data is announced on the air pollution observation website (https://airmap.g0v.tw/). Therefore, the public may keep abreast of the air quality of Taiwan through another channel without completely relying on the monitoring station of the Environmental Protection Administration. As you can see, when data labors are organized, their value is infinite, and they will be utilized in varied ways.
 
-🌐 The prerequisite for such practice is that all individuals regard themselves as the producers of data and that they have the right to copy, modify, or delete their personal assets at any time. In this way, a new cooperative relationship will emerge. For instance, due to the recent demand for online purchase of medical masks, many people have downloaded the mobile application of the National Health Insurance Administration and found that they may have access to their mask collection records whenever they want to. On this basis, we can design a data collaborative. For example, individuals can dedicate the uncollected masks to countries in need, with priority given to their medical personnel. The records on the mobile application will be the proof for the Ministry of Foreign Service's humanitarian assistance efforts. Hence, people provide direct feedback by sharing their data, which shows the significance of "Data as Labor."
+🌐 The prerequisite for such practice is that all individuals regard themselves as the producers of data and that they have the right to copy, modify, or withdraw their data contributions at any time. In this way, a new cooperative relationship will emerge. For instance, due to the recent demand for online purchase of medical masks, many people have downloaded the mobile application of the National Health Insurance Administration and found that they may have access to their mask collection records whenever they want to. On this basis, we can design a data collaborative. For example, individuals can dedicate the uncollected masks to countries in need, with priority given to their medical personnel. The records on the mobile application will be the proof for the Ministry of Foreign Service's humanitarian assistance efforts. Hence, people provide direct feedback by sharing their data, which shows the significance of "Data as Labor."
 
 ---
 
